--- a/app/views/attempts/new.html.erb
+++ b/app/views/attempts/new.html.erb
@@ -1,5 +1,6 @@
 <h1>New Attempt</h1>
 
 <%= render 'form', attempt: @attempt %>
-
+<%= @test.code %>
+<%= link_to 'Sign out', destroy_user_session_path,{:method =>:delete}%>
 <%= link_to 'Back', attempts_path %>
