--- a/app/views/attempts/_form.html.erb
+++ b/app/views/attempts/_form.html.erb
@@ -16,10 +16,10 @@
     <%= form.text_field :content, id: :attempt_content %>
   </div>
 
-  <div class="field">
-    <%= form.label :user_id %>
+  <!--div class="field">
+  <%= form.label :user_id %>
     <%= form.number_field :user_id, id: :attempt_user_id %>
-  </div>
+  </div!-->
 
   <div class="actions">
     <%= form.submit %>
