--- a/app/views/user_notifier_mailer/send_email.html.erb
+++ b/app/views/user_notifier_mailer/send_email.html.erb
@@ -4,9 +4,8 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>TUse this code to log in!</h1>
+    <h1>Use this code to log in!</h1>
     <%= @code %>
-    <p>Thanks for joining and have a great day! Now sign in and do
-awesome things!</p>
+    <p></p>
   </body>
 </html>
