--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,8 +1,9 @@
-<h2>Sign up</h2>
+<% provide(:title, 'Sign up') %>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
-
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
   <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
@@ -22,8 +23,12 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.submit "Sign up", class: "btn btn-primary" %>
   </div>
-<% end %>
+  <% end %>
+  <p>Already a memeber?<%= render "devise/shared/links" %></p>
+</div>
+</div>
 
-<%= render "devise/shared/links" %>
+
+
