--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -23,8 +23,8 @@
             </ul>
           </li>
         <% else %>
-          <li><%= link_to "Log in", 'users/sign_in' %></li>
-          <li><%= link_to "Sign up", 'users/sign_up' %></li>
+          <li><%= link_to "Log in", '/users/sign_in' %></li>
+          <li><%= link_to "Sign up", '/users/sign_up' %></li>
         <% end %>
       </ul>
     </nav>
