fixed scaffold and redirected forgot password

--- a/app/views/presets/_form.html.erb
+++ b/app/views/presets/_form.html.erb
@@ -12,13 +12,13 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :code %>
-    <%= form.text_field :code, id: :preset_code %>
+    <%= form.label :email %>
+    <%= form.text_field :email, id: :preset_email %>
   </div>
 
   <div class="field">
-    <%= form.label :user_id %>
-    <%= form.number_field :user_id, id: :preset_user_id %>
+    <%= form.label :code %>
+    <%= form.text_field :code, id: :preset_code %>
   </div>
 
   <div class="actions">
