--- a/app/views/presets/show.html.erb
+++ b/app/views/presets/show.html.erb
@@ -1,13 +1,13 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Code:</strong>
-  <%= @preset.code %>
+  <strong>Email:</strong>
+  <%= @preset.email %>
 </p>
 
 <p>
-  <strong>User:</strong>
-  <%= @preset.user_id %>
+  <strong>Code:</strong>
+  <%= @preset.code %>
 </p>
 
 <%= link_to 'Edit', edit_preset_path(@preset) %> |
