--- a/app/views/presets/index.html.erb
+++ b/app/views/presets/index.html.erb
@@ -5,8 +5,8 @@
 <table>
   <thead>
     <tr>
+      <th>Email</th>
       <th>Code</th>
-      <th>User</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -14,8 +14,8 @@
   <tbody>
     <% @presets.each do |preset| %>
       <tr>
+        <td><%= preset.email %></td>
         <td><%= preset.code %></td>
-        <td><%= preset.user_id %></td>
         <td><%= link_to 'Show', preset %></td>
         <td><%= link_to 'Edit', edit_preset_path(preset) %></td>
         <td><%= link_to 'Destroy', preset, method: :delete, data: { confirm: 'Are you sure?' } %></td>
