--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,13 +8,13 @@
 
         
         <% if logged_in? %>
-          <li><%= link_to "Users", root_path %></li>
+         
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               Account <b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
-              <li><%= link_to "Profile", '#' %></li>
+              <li><%= link_to "Profile", '/welcome/profile' %></li>
               <li><%= link_to "Settings", '#' %></li>
               <li class="divider"></li>
               <li>
