--- a/app/views/welcome/profile.html.erb
+++ b/app/views/welcome/profile.html.erb
@@ -1,9 +1,9 @@
 
-<h1> Your Profile </h1>
-<%= @user.first_name %> <%= @user.last_name %>
-<%= @user.email %>
+<h1> Welcome <%= @user.first_name%> <%= @user.last_name%> to your page! </h1>
+
+
 <h3>Personal Information</h3>
-		<button>Passwords</button>
+		<button><%= @user.email %></button>
 		<button>Documents</button>
 		<button>Birthdays</button>
 		<button>Addresses</button>	
